--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,36 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Jenkins_gdrx</th></tr>
-<tr><td><a href="#t0">Goodrxmedicine</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">34,722</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">20,481</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Jenkins_gdrx</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Goodrxmedicine &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Testcases.TC001</td><td><a href="#m0">Order</a></td><td rowspan="1">1737010648690</td><td rowspan="1">34668</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Testscripts.Verify_CategoryPage_Functionality</td><td><a href="#m0">verify_Functiobality</a></td><td rowspan="1">1737444620253</td><td rowspan="1">15417</td></tr></tbody>
 </table>
-<h2>Goodrxmedicine</h2><h3 id="m0">Testcases.TC001#Order</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Passed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Testscripts.Verify_CategoryPage_Functionality#verify_Functiobality</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Items 21-40 of 133
+Sort By
+ Position
+ Product Name
+ Price
+Set Descending Direction<br/>Items 1-20 of 133
+Sort By
+ Position
+ Product Name
+ Price
+Set Descending Direction<br/>Pagination is working<br/>Readmore Button is working<br/>Readless Button is working<br/>Items 1-20 of 133
+Sort By
+ Position
+ Product Name
+ Price
+Set Descending Direction<br/>Items 1-20 of 133
+Sort By
+ Position
+ Product Name
+ Price
+Set Descending Direction<br/>Sortby filter & Ascending/Descending working<br/>Price
+$100.00 - $199.99
+Remove This Item
+Manufacturer
+Fortune Healthcare, India
+Remove This Item<br/>Manufacturer & Price filtered By Options is working</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
