--- a/test-output/index.html
+++ b/test-output/index.html
@@ -38,8 +38,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-Jenkins_gdrx" class="navigator-link">
-              <span class="suite-name border-passed">Jenkins_gdrx</span>
+            <a href="#" panel-name="suite-Default_suite" class="navigator-link">
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,37 +49,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-Jenkins_gdrx" class="navigator-link ">
-                    <span>C:\Users\Sipu Nayak\automation testing\Jenkins_Gdrx\TestNG.xml</span>
+                  <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
+                    <span>C:\Users\Sipu Nayak\AppData\Local\Temp\testng-eclipse-1270676427\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-Jenkins_gdrx" class="navigator-link ">
+                  <a href="#" panel-name="testlist-Default_suite" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-Jenkins_gdrx" class="navigator-link ">
+                  <a href="#" panel-name="group-Default_suite" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-Jenkins_gdrx" class="navigator-link ">
+                  <a href="#" panel-name="times-Default_suite" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-Jenkins_gdrx" class="navigator-link ">
+                  <a href="#" panel-name="reporter-Default_suite" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-Jenkins_gdrx" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-Default_suite" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-Jenkins_gdrx" class="navigator-link ">
+                  <a href="#" panel-name="chronological-Default_suite" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -97,16 +97,16 @@
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Jenkins_gdrx" class="hide-methods passed suite-Jenkins_gdrx"> (hide)</a> <!-- hide-methods passed suite-Jenkins_gdrx -->
-                      <a href="#" panel-name="suite-Jenkins_gdrx" class="show-methods passed suite-Jenkins_gdrx"> (show)</a> <!-- show-methods passed suite-Jenkins_gdrx -->
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content passed suite-Jenkins_gdrx">
+                    <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Jenkins_gdrx" title="Testcases.TC001" class="method navigator-link" hash-for-method="Order">Order</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Testscripts.Verify_CategoryPage_Functionality" class="method navigator-link" hash-for-method="verify_Functiobality">verify_Functiobality</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Jenkins_gdrx -->
+                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -117,73 +117,69 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Jenkins_gdrx" class="panel Jenkins_gdrx">
-          <div class="suite-Jenkins_gdrx-class-passed">
+        <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Testcases.TC001</span>
+              <span class="class-name">Testscripts.Verify_CategoryPage_Functionality</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Order">
-                  </a> <!-- Order -->
-                  <span class="method-name">Order</span>
+                  <a name="verify_Functiobality">
+                  </a> <!-- verify_Functiobality -->
+                  <span class="method-name">verify_Functiobality</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Jenkins_gdrx-class-passed -->
-        </div> <!-- panel Jenkins_gdrx -->
-        <div panel-name="test-xml-Jenkins_gdrx" class="panel">
+          </div> <!-- suite-Default_suite-class-passed -->
+        </div> <!-- panel Default_suite -->
+        <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Sipu Nayak\automation testing\Jenkins_Gdrx\TestNG.xml</span>
+            <span class="header-content">C:\Users\Sipu Nayak\AppData\Local\Temp\testng-eclipse-1270676427\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Jenkins_gdrx&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Goodrxmedicine&quot; verbose=&quot;2&quot;&gt;
-    &lt;packages&gt;
-      &lt;package name=&quot;Testcases&quot;/&gt;
-    &lt;/packages&gt;
+&lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Testcases.TC001&quot;/&gt;
-      &lt;class name=&quot;Testcases.TC002&quot;/&gt;
+      &lt;class name=&quot;Testscripts.Verify_CategoryPage_Functionality&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Goodrxmedicine --&gt;
-&lt;/suite&gt; &lt;!-- Jenkins_gdrx --&gt;
+  &lt;/test&gt; &lt;!-- Default test --&gt;
+&lt;/suite&gt; &lt;!-- Default suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Jenkins_gdrx" class="panel">
+        <div panel-name="testlist-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Jenkins_gdrx</span>
+            <span class="header-content">Tests for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Goodrxmedicine (2 classes)</span>
+                <span class="test-name">Default test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Jenkins_gdrx" class="panel">
+        <div panel-name="group-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Jenkins_gdrx</span>
+            <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Jenkins_gdrx" class="panel">
+        <div panel-name="times-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Jenkins_gdrx</span>
+            <span class="header-content">Times for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Jenkins_gdrx');
-function tableData_Jenkins_gdrx() {
+suiteTableInitFunctions.push('tableData_Default_suite');
+function tableData_Default_suite() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
@@ -191,50 +187,92 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Order')
-data.setCell(0, 2, 'Testcases.TC001')
-data.setCell(0, 3, 34668);
-window.suiteTableData['Jenkins_gdrx']= { tableData: data, tableDiv: 'times-div-Jenkins_gdrx'}
+data.setCell(0, 1, 'verify_Functiobality')
+data.setCell(0, 2, 'Testscripts.Verify_CategoryPage_Functionality')
+data.setCell(0, 3, 15417);
+window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 34 seconds</span>
-              <div id="times-div-Jenkins_gdrx">
-              </div> <!-- times-div-Jenkins_gdrx -->
+              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <div id="times-div-Default_suite">
+              </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Jenkins_gdrx" class="panel">
+        <div panel-name="reporter-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Jenkins_gdrx</span>
+            <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">Order</span>
+              <span class="reporter-method-name">verify_Functiobality</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Passed</span>
+                <span class="reporter-method-output">Items 21-40 of 133
+Sort By
+ Position
+ Product Name
+ Price
+Set Descending Direction</span>
+                <span class="reporter-method-output">Items 1-20 of 133
+Sort By
+ Position
+ Product Name
+ Price
+Set Descending Direction</span>
+                <span class="reporter-method-output">Pagination is working</span>
+                <span class="reporter-method-output">Readmore Button is working</span>
+                <span class="reporter-method-output">Readless Button is working</span>
+                <span class="reporter-method-output">Items 1-20 of 133
+Sort By
+ Position
+ Product Name
+ Price
+Set Descending Direction</span>
+                <span class="reporter-method-output">Items 1-20 of 133
+Sort By
+ Position
+ Product Name
+ Price
+Set Descending Direction</span>
+                <span class="reporter-method-output">Sortby filter & Ascending/Descending working</span>
+                <span class="reporter-method-output">Price
+$100.00 - $199.99
+Remove This Item
+Manufacturer
+Fortune Healthcare, India
+Remove This Item</span>
+                <span class="reporter-method-output">Manufacturer & Price filtered By Options is working</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Jenkins_gdrx" class="panel">
+        <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Jenkins_gdrx" class="panel">
+        <div panel-name="chronological-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Testcases.TC001</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">Order</span>
+              <div class="chronological-class-name">Testscripts.Verify_CategoryPage_Functionality</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">verify_Functiobality</span>
+                <span class="method-start">5044 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">20461 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
