--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="668b6e">  <td>25/01/15 18:23:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001.Order()[pri:0, instance:Testcases.TC001@66f57048]">Order</td> 
-  <td>main@2114289475</td>   <td></td> </tr>
+<tr bgcolor="668b6e">  <td>25/01/21 13:00:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Verify_CategoryPage_Functionality.verify_Functiobality()[pri:0, instance:Testscripts.Verify_CategoryPage_Functionality@537f60bf]">verify_Functiobality</td> 
+  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>25/01/21 13:00:35</td>   <td>15418</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown()[pri:0, instance:Testscripts.Verify_CategoryPage_Functionality@537f60bf]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>25/01/21 13:00:15</td>   <td>-5034</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setUp()[pri:0, instance:Testscripts.Verify_CategoryPage_Functionality@537f60bf]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@426960147</td>   <td></td> </tr>
 </table>
