--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,36 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Items 21-40 of 133
-Sort By
- Position
- Product Name
- Price
-Set Descending Direction</td></tr>
-<tr><td>Items 1-20 of 133
-Sort By
- Position
- Product Name
- Price
-Set Descending Direction</td></tr>
-<tr><td>Pagination is working</td></tr>
-<tr><td>Readmore Button is working</td></tr>
-<tr><td>Readless Button is working</td></tr>
-<tr><td>Items 1-20 of 133
-Sort By
- Position
- Product Name
- Price
-Set Descending Direction</td></tr>
-<tr><td>Items 1-20 of 133
-Sort By
- Position
- Product Name
- Price
-Set Descending Direction</td></tr>
-<tr><td>Sortby filter & Ascending/Descending working</td></tr>
-<tr><td>Price
-$100.00 - $199.99
-Remove This Item
-Manufacturer
-Fortune Healthcare, India
-Remove This Item</td></tr>
-<tr><td>Manufacturer & Price filtered By Options is working</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
